# berichan-trader

./: .env.example  .gitignore  LICENSE  README.md  Run-Berichan-Trader.bat  berichan.spec  berichan_app.py  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml
assets/data/: abilities.json  champions.json  items.json  moves.json
berichan/: config.py  games.py  items.py  main.py  meta.py  paths.py  pokedex.py  reporter.py  secrets_store.py  trade_manager.py  twitch_client.py
berichan/gui/: __init__.py  app.py  qt_reporter.py  sound.py
berichan/gui/pages/: trade_page.py
berichan/gui/widgets/: pokemon_card.py  pokemon_editor.py  species_picker.py  stat_spread.py
src/: config.py  pokedex.py  team_parser.py  team_store.py  twitch_auth.py
src/gui/: app.py  main_window.py  onboarding.py  theme.py
src/gui/pages/: __init__.py  settings_page.py  team_page.py
src/gui/widgets/: pokemon_card.py  pokemon_editor.py  stat_spread.py
tests/: test_conversion.py  test_team_parser.py
tools/: gen_icons.py  gen_items.py  gen_legality.py  gen_meta.py  gen_moves_abilities.py  gen_pokedex.py  gen_sprites.py
web/: auth.ts
web/app/: layout.tsx  page.tsx
web/components/: AppProviders.tsx  AppShell.tsx  EvOptimizer.tsx  MetaDetail.tsx  MetaSprite.tsx  PokemonEditor.tsx  auth.tsx  scale.tsx  team.tsx
web/lib/: data.ts  games.ts  legality.ts  meta.ts  optimize.ts  preview.ts  roles.ts  share.ts  sound.ts  speed.ts  tradeEngine.ts  tradeSettings.ts  twitchChat.ts  typeColors.ts  types.ts
web/scripts/: sync-assets.mjs
web/types/: next-auth.d.ts
(+12 files in other folders)
